# wysiwyc

./: .gitignore  .gitmodules  README.md  wysiwyc.py  wysiwyc.sln
OverlapView/: OverlapView.py
exploder_strokes_fills/: README.md  explode.rb  explode_strokes_fills.py
flattening/: CMakeLists.txt  README.md  os.jam  wysiwyc.sln
flattening/cmake/: FindTINYXML2.cmake
flattening/example/: visibleSvg.cpp
flattening/graphics/: mySVG.cpp  mySVG.h
flattening/polygons/: myPolygon.cpp  myPolygon.h
flattening/src/: clipper.hpp  visibleSvg.cpp
flattening/visibleSvg/: main.cpp
flattening/visibleSvg/files/: rectangles.txt
flattening/visibleSvg/include/: assign_winding_number.h  curve_index_observer.h  extract_edges.h  face_index_observer.h  flatten.h  helper.h  make_arrangement.h  print_arrangement.h  read_svg.h  write_svg.h
flattening/visibleSvg/src/: assign_winding_number.cpp  curve_index_observer.cpp  extract_edges.cpp  flatten.cpp  helper.cpp  make_arrangement.cpp  old_functions.cpp  print_arrangement.cpp  read_svg.cpp  write_svg.cpp
flattening/visible_arrangement/files/: exact-overlap.txt
flattening/visible_arrangement/include/: compute_subcurves.h  make_arrangement.h  read_svg.h
flattening/visible_arrangement/src/: assign_winding_number.cpp  compute_subcurves.cpp  extract_edges.cpp  face_index_observer.cpp  flatten.cpp  helper.cpp  intersect_bezier.cpp  make_monotone.cpp  write_svg.cpp
flattening/visible_arrangment/: main.cpp  test.txt
flattening/visible_arrangment/include/: assign_winding_number.h  flatten.h  helper.h  intersect_bezier.h  make_monotone.h
flattening/visible_arrangment/src/: read_svg.cpp
flattening/visible_strokes/: main.cpp  visible_strokes.vcxproj  visible_strokes.vcxproj.filters
flattening/visible_strokes/files/: lines.txt
flattening/visible_strokes/include/: decide_to_keep.h  fill_over_stroke.h  flatten.h  helper.h  in_on_out.h  read_svg.h  split_segments.h  stroke_over_stroke.h  write_svg.h
flattening/visible_strokes/src/: decide_to_keep.cpp  fill_over_stroke.cpp  flatten.cpp  in_on_out.cpp  read_svg.cpp  split_segments.cpp  stroke_over_stroke.cpp  write_svg.cpp
src/: clipper.cpp
